--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
 
 <body>
   <div class="menu">
+    <script src="../dist/menu/menu.js"></script>
     <ul>
-      <li><button type="button" id="createFestivalButton">Create Festival</button></li>
-      <li><button type="button" id="openFestivalButton">Open Festival</button></li>
-      <li><button type="button" id="printButton">Print Running Order</button></li>
+      <li><button type="button" onclick="createFestival()"><i class="material-icons">add_circle_outline</i></button></li>
+      <li><button type="button" onclick="openFestival()"><i class="material-icons">folder_open</i></button></li>
+      <li><button type="button" onclick="printRunningOrder()"><i class="material-icons">print</i></button></li>
     </ul>
   </div>
-  <script src="../dist/menu/menu.js"></script>
 </body>
 
 </html>
