--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
   <div class="menu">
     <script src="../dist/menu/menu.js"></script>
     <ul>
-      <li><button type="button" onclick="createFestival()"><i class="material-icons">add_circle_outline</i></button></li>
-      <li><button type="button" onclick="openFestival()"><i class="material-icons">folder_open</i></button></li>
-      <li><button type="button" onclick="printRunningOrder()"><i class="material-icons">print</i></button></li>
+      <li><button type="button" class="tooltip" onclick="createFestival()"><i class="material-icons">add_circle_outline</i><span class="tooltiptext">Create Festival</span></button></li>
+      <li><button type="button" class="tooltip" onclick="openFestival()" ><i class="material-icons">folder_open</i><span class="tooltiptext">Open Festival</span></button></li>
+      <li><button type="button" class="tooltip" onclick="printRunningOrder()"><i class="material-icons">print</i><span class="tooltiptext">Print Running Order</span></button></li>
     </ul>
   </div>
 </body>
