PR Review (Main Structure, Resizeable Band list sidebar)

--- a/src/index.html
+++ b/src/index.html
@@ -11,30 +11,30 @@
   <div class="menu">
     <script src="../dist/menu/menu.js"></script>
     <ul>
-      <li><button type="button" class="tooltip" onclick="createFestival()"><i
-            class="material-icons">add_circle_outline</i><span class="tooltiptext">Create Festival</span></button></li>
-      <li><button type="button" class="tooltip" onclick="openFestival()"><i class="material-icons">folder_open</i><span
-            class="tooltiptext">Open Festival</span></button></li>
-      <li><button type="button" class="tooltip" onclick="printRunningOrder()"><i class="material-icons">print</i><span
-            class="tooltiptext">Print Running Order</span></button></li>
+      <li><button type="button" class="tooltip" onclick="createFestival()"><i class="material-icons">add_circle_outline</i><span class="tooltiptext">Create Festival</span></button></li>
+      <li><button type="button" class="tooltip" onclick="openFestival()"><i class="material-icons">folder_open</i><span class="tooltiptext">Open Festival</span></button></li>
+      <li><button type="button" class="tooltip" onclick="printRunningOrder()"><i class="material-icons">print</i><span class="tooltiptext">Print Running Order</span></button></li>
     </ul>
   </div>
   <main>
-      <section class="ro-output">
-        <h2>Running Order</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis suscipit nisi error. Fugiat eum quia,
-          natus modi consequuntur eius omnis error ipsa dolores similique enim. Vel voluptatem repellendus tempora
-          nam.</p>
-      </section>
-      <div class="handler"></div>
-      <section class="band-list">
-        <h2>Bands</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto iusto labore eaque itaque omnis
-          consequuntur cumque, perferendis, ex quas voluptas quo. Distinctio ut quibusdam molestiae fuga. Alias ipsum
-          asperiores repudiandae!</p>
-      </section>
-    <script src="resizeable-flexbox.js"></script>
+    <section class="ro-output">
+      <h2>Running Order</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis suscipit nisi error. Fugiat eum quia,
+        natus modi consequuntur eius omnis error ipsa dolores similique enim. Vel voluptatem repellendus tempora
+        nam.
+      </p>
+    </section>
+    <div class="handler"></div>
+    <section class="band-list">
+      <h2>Bands</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto iusto labore eaque itaque omnis
+        consequuntur cumque, perferendis, ex quas voluptas quo. Distinctio ut quibusdam molestiae fuga. Alias ipsum
+        asperiores repudiandae!
+      </p>
+    </section>
+    <script src="../dist/resizeable-flexbox.js"></script>
   </main>
 </body>
-
 </html>
