--- a/src/create-dialog/create-dialog.html
+++ b/src/create-dialog/create-dialog.html
@@ -10,21 +10,21 @@
 <body>
   <!-- Placeholder form -->
   <form id="createFestivalForm">
-    <label for="name">Name: </label>
-    <input type="text" id="name" name="name"><br>
+    <label for="name">Festival Name</label>
+    <input type="text" id="name" name="name" placeholder="Wacken 2020">
 
-    <label for="startDate">Start date: </label>
-    <input type="date" id="startDate" name="startDate"><br>
+    <label for="startDate">First Day</label>
+    <input type="date" id="startDate" name="startDate">
 
-    <label for="endDate">End date: </label>
-    <input type="date" id="endDate" name="endDate"><br>
+    <label for="endDate">Last Day</label>
+    <input type="date" id="endDate" name="endDate">
 
-    <label for="bandCategories">Band categories</label>
-    <input type="text" id="bandCategories" name="bandCategories"><br>
+    <label for="bandCategories">Band Categories</label>
+    <input type="text" id="bandCategories" name="bandCategories" placeholder="must see, maybe, ...">
 
-    <label for="festivalAdapter">Adapter: </label>
-    <select id="festivalAdapter" name="festivalAdapter"></select><br>
-    <input type="submit">
+    <label for="festivalAdapter">Adapter </label>
+    <select id="festivalAdapter" name="festivalAdapter"></select>
+    <input type="submit" value="create festival">
   </form>
   <script>require('../../dist/create-dialog/create-dialog.js');</script>
 </body>
