Create festival dialog can save to file

--- a/src/create-dialog/create-dialog.html
+++ b/src/create-dialog/create-dialog.html
@@ -11,19 +11,19 @@
   <!-- Placeholder form -->
   <form id="createFestivalForm">
     <label for="name">Name: </label>
-    <input type="text" id="name" name="name"><br>
+    <input type="text" id="name" name="name" required><br>
 
     <label for="startDate">Start date: </label>
-    <input type="date" id="startDate" name="startDate"><br>
+    <input type="date" id="startDate" name="startDate" required><br>
 
     <label for="endDate">End date: </label>
-    <input type="date" id="endDate" name="endDate"><br>
+    <input type="date" id="endDate" name="endDate" required><br>
 
     <label for="bandCategories">Band categories</label>
-    <input type="text" id="bandCategories" name="bandCategories"><br>
+    <input type="text" id="bandCategories" name="bandCategories" required><br>
 
     <label for="festivalAdapter">Adapter: </label>
-    <select id="festivalAdapter" name="festivalAdapter"></select><br>
+    <select id="festivalAdapter" name="festivalAdapter" required></select><br>
     <input type="submit">
   </form>
   <script>require('../../dist/create-dialog/create-dialog.js');</script>
