--- a/src/index.html
+++ b/src/index.html
@@ -14,27 +14,20 @@
       <li><button type="button" class="tooltip" id="openFestivalButton"><i class="material-icons">folder_open</i><span class="tooltiptext">Open Festival</span></button></li>
       <li><button type="button" class="tooltip" id="printRunningOrderButton"><i class="material-icons">print</i><span class="tooltiptext">Print Running Order</span></button></li>
     </ul>
-    <script>require('../dist/menu/menu.js');</script>
   </div>
   <main>
     <section class="ro-output">
       <h2>Running Order</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis suscipit nisi error. Fugiat eum quia,
-        natus modi consequuntur eius omnis error ipsa dolores similique enim. Vel voluptatem repellendus tempora
-        nam.
-      </p>
+      <div class="date-nav">
+        <ul></ul>
+      </div>
     </section>
     <div class="handler"></div>
     <section class="band-list">
       <h2>Bands</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto iusto labore eaque itaque omnis
-        consequuntur cumque, perferendis, ex quas voluptas quo. Distinctio ut quibusdam molestiae fuga. Alias ipsum
-        asperiores repudiandae!
-      </p>
     </section>
-    <script src="../dist/resizeable-flexbox.js"></script>
   </main>
+  <script>require('../dist/renderer.js');</script>
 </body>
+
 </html>
