--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,17 @@
     </ul>
   </div>
   <main>
+    <section class="band-list">
+      <div class="band-list-content">
+        <h2>Bands</h2>
+      </div>
+      <div class="handler"></div>
+    </section>
     <section class="ro-output">
       <h2>Running Order</h2>
       <div class="date-nav">
         <ul></ul>
       </div>
-    </section>
-    <div class="handler"></div>
-    <section class="band-list">
-      <h2>Bands</h2>
     </section>
   </main>
   <script>require('../dist/renderer.js');</script>
