Add settings button

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <ul>
       <li><button type="button" class="tooltip" id="createFestivalButton"><i class="material-icons">add_circle_outline</i><span class="tooltiptext">Create Festival</span></button></li>
       <li><button type="button" class="tooltip" id="openFestivalButton"><i class="material-icons">folder_open</i><span class="tooltiptext">Open Festival</span></button></li>
+      <li><button type="button" class="tooltip" id="settingsButton"><i class="material-icons">settings</i><span class="tooltiptext">Settings</span></button></li>
       <li><button type="button" class="tooltip" id="printRunningOrderButton"><i class="material-icons">print</i><span class="tooltiptext">Print Running Order</span></button></li>
     </ul>
   </div>
