Interface of BandList and some tests

--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,17 @@
   </div>
   <main>
     <section class="band-list">
+      <h2>Bands</h2>
       <div class="band-list-content">
-        <h2>Bands</h2>
       </div>
-      <div class="handler"></div>
     </section>
+    <div class="handler"></div>
     <section class="ro-output">
       <h2>Running Order</h2>
       <div class="date-nav">
         <ul></ul>
+      </div>
+      <div class="ro-output-content">
       </div>
     </section>
   </main>
