--- a/src/festival-settings-dialog/festival-settings-dialog.html
+++ b/src/festival-settings-dialog/festival-settings-dialog.html
@@ -25,7 +25,7 @@
 
     <label for="festivalAdapter">Adapter </label>
     <select id="festivalAdapter" name="festivalAdapter"></select>
-    <input type="submit" value="create festival">
+    <input type="submit" value="save">
   </form>
   <script>require('../../dist/festival-settings-dialog/festival-settings-dialog.js');</script>
 </body>
