WIP: running order output
Add order of stages to Festival
Add rank to BandCategory
Tie in running order output
Start work in running order building algorithm

--- a/src/festival-settings-dialog/festival-settings-dialog.html
+++ b/src/festival-settings-dialog/festival-settings-dialog.html
@@ -20,7 +20,7 @@
     <label for="bandCategories">Band Categories</label>
     <button id="addCategory" type="button"><i class="material-icons">add_circle_outline</i></button>
     <table id="bandCategories">
-      <tr><th>name</th><th>color</th></tr>
+      <tr><th>name</th><th>color</th><th>rank</th></tr>
     </table>
 
     <label for="festivalAdapter">Adapter </label>
