--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,10 @@
   </div>
   <main>
     <section class="band-list">
-      <h2>Bands</h2>
-      <div class="band-list-content">
+      <div class="band-list-content-container">
+        <h2>Bands</h2>
+        <div class="band-list-content">
+        </div>
       </div>
       <div class="handler"></div>
     </section>
